fix alignment of hamburger icon (IE11)

--- a/src/style.css
+++ b/src/style.css
@@ -126,6 +126,7 @@ p {
 
 .toggle-nav {
     border: 0;
+    margin-left: auto;
     color: white;
     background-color: transparent;
     font-size: 1.7rem;
